removed new Double()